# aws-boilerplate-python

./: README.md  pyproject.toml
src/example/: lambda_handler.py
src/gorest/: __init__.py  users.py
tests/example/: test_lambda_handler.py
tests/gorest/: test_users.py
