[tool.poetry]
name = "aws-boilerplate-python"
version = "0.0.1"
description = "Starter Python project for development with the goal of adding AWS support."
authors = ["Nesbert Hidalgo <nesbert@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "example", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
black = "^23.7.0"
coverage = "^7.2.7"
requests-mock = "^1.11.0"

[tool.poetry.scripts]
lambda-handler = "example.lambda_handler:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
